Update byte buddy